--- a/index.html
+++ b/index.html
@@ -18,7 +18,18 @@
                         O que é JavaScript?
                     </div>
                     <div class="cartao_conteudo_resposta">
-                        JavaScript é uma linguagem de programação.
+                        O JavaScript é uma linguagem de programação.
+                    </div>
+                </div>
+            </article>
+            <article class="cartao">
+                <div class="cartao_conteudo">
+                    <h3>PROGRAMAÇÃO</h3>
+                    <div class="cartao_conteudo_pergunta">
+                        O que é CSS?
+                    </div>
+                    <div class="cartao_conteudo_resposta">
+                        O JavaScript é uma linguagem de estilização.
                     </div>
                 </div>
             </article>
@@ -26,62 +37,50 @@
                 <div class="cartao_conteudo">
                     <h3>CIÊNCIAS</h3>
                     <div class="cartao_conteudo_pergunta">
-                        o que é fotossintese?
+                        O que é Fotossintese?
                     </div>
                     <div class="cartao_conteudo_resposta">
-                        processo biológico através do qual plantas, algas e algumas bactérias convertem energia luminosa em energia química, na forma de glicose (ou outros açúcares).
-                    </div>
-                </div>
-            </article>
-             <article class="cartao">
-                <div class="cartao_conteudo">
-                    <h3>MATEMÁTICA</h3>
-                    <div class="cartao_conteudo_pergunta">
-                        como calcular os catetos do triângulo?
-                    </div>
-                    <div class="cartao_conteudo_resposta">
-                        a² = b² + c², onde 'a' é a hipotenusa (o lado oposto ao ângulo reto) e 'b' e 'c' são os catetos.
-                    </div>
-                </div>
-            </article>
-             <article class="cartao">
-                <div class="cartao_conteudo">
-                    <h3>HISTÓRIA</h3>
-                    <div class="cartao_conteudo_pergunta">
-                        quem descobriu o Brasil?
-                    </div>
-                    <div class="cartao_conteudo_resposta">
-                         Pedro Álvares Cabral.
+                        O JavaScript é uma linguagem de estilização.
                     </div>
                 </div>
             </article>
             <article class="cartao">
                 <div class="cartao_conteudo">
-                    <h3>GEOGRAFIA</h3>
+                    <h3>CIÊNCIAS</h3>
                     <div class="cartao_conteudo_pergunta">
-                        O que a la-nina causa?
+                        O que é Fotossintese?
                     </div>
                     <div class="cartao_conteudo_resposta">
-                        O La Niña é causado pelo resfriamento anormal das águas superficiais do Oceano Pacífico Equatorial, especialmente na região central e leste.
+                        O JavaScript é uma linguagem de estilização.
                     </div>
                 </div>
             </article>
             <article class="cartao">
                 <div class="cartao_conteudo">
-                    <h3>BIOLOGIA</h3>
+                    <h3>CIÊNCIAS</h3>
                     <div class="cartao_conteudo_pergunta">
-                        qual a diferença de vírus e bactérias?
+                        O que é Fotossintese?
                     </div>
                     <div class="cartao_conteudo_resposta">
-                       As bactérias nem sempre são prejudiciais: algumas são vitais para a saúde humana, como as que compõem a flora intestinal e auxiliam na digestão. Já os vírus não são células, são partículas infecciosas.
+                        O JavaScript é uma linguagem de estilização.
+                    </div>
+                </div>
+            </article>
+            <article class="cartao">
+                <div class="cartao_conteudo">
+                    <h3>TEMA</h3>
+                    <div class="cartao_conteudo_pergunta">
+                        PERGUNTA?
+                    </div>
+                    <div class="cartao_conteudo_resposta">
+                        RESPOSTA...
                     </div>
                 </div>
             </article>
         </section>
     </main>
     <footer>
-
-        <p>projeto desenvolvido pelo segundo B,sem fins lucrativos</p>
+        <p>Projeto desenvolvido pelo 2ºB, sem fins lucrativo</p>
     </footer>
 </body>
 
