--- a/index.html
+++ b/index.html
@@ -13,67 +13,12 @@
         <section id="container">
             <article class="cartao">
                 <div class="cartao_conteudo">
-                    <h3>PROGRAMAÇÃO</h3>
+                    <h3>GEOGRAFIA</h3>
                     <div class="cartao_conteudo_pergunta">
-                        O que é JavaScript?
+                        Qual o maior planeta do sistema solar?
                     </div>
                     <div class="cartao_conteudo_resposta">
-                        O JavaScript é uma linguagem de programação.
-                    </div>
-                </div>
-            </article>
-            <article class="cartao">
-                <div class="cartao_conteudo">
-                    <h3>PROGRAMAÇÃO</h3>
-                    <div class="cartao_conteudo_pergunta">
-                        O que é CSS?
-                    </div>
-                    <div class="cartao_conteudo_resposta">
-                        O JavaScript é uma linguagem de estilização.
-                    </div>
-                </div>
-            </article>
-            <article class="cartao">
-                <div class="cartao_conteudo">
-                    <h3>CIÊNCIAS</h3>
-                    <div class="cartao_conteudo_pergunta">
-                        O que é Fotossintese?
-                    </div>
-                    <div class="cartao_conteudo_resposta">
-                        O JavaScript é uma linguagem de estilização.
-                    </div>
-                </div>
-            </article>
-            <article class="cartao">
-                <div class="cartao_conteudo">
-                    <h3>CIÊNCIAS</h3>
-                    <div class="cartao_conteudo_pergunta">
-                        O que é Fotossintese?
-                    </div>
-                    <div class="cartao_conteudo_resposta">
-                        O JavaScript é uma linguagem de estilização.
-                    </div>
-                </div>
-            </article>
-            <article class="cartao">
-                <div class="cartao_conteudo">
-                    <h3>CIÊNCIAS</h3>
-                    <div class="cartao_conteudo_pergunta">
-                        O que é Fotossintese?
-                    </div>
-                    <div class="cartao_conteudo_resposta">
-                        O JavaScript é uma linguagem de estilização.
-                    </div>
-                </div>
-            </article>
-            <article class="cartao">
-                <div class="cartao_conteudo">
-                    <h3>TEMA</h3>
-                    <div class="cartao_conteudo_pergunta">
-                        PERGUNTA?
-                    </div>
-                    <div class="cartao_conteudo_resposta">
-                        RESPOSTA...
+                        Júpiter.
                     </div>
                 </div>
             </article>
@@ -82,6 +27,8 @@
     <footer>
         <p>Projeto desenvolvido pelo 2ºB, sem fins lucrativo</p>
     </footer>
+    <script sre="app.js"></script>
+    <script sre="perguntas.js"></script>
 </body>
 
 </html>
