--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
 <body>
     <main>
         <section id="container">
-            <article class="cartao">
-                <div class="cartao_conteudo">
-                    <h3>GEOGRAFIA</h3>
-                    <div class="cartao_conteudo_pergunta">
-                        Qual o maior planeta do sistema solar?
+              <!-- <article class="cartao">
+                <div class="cartao__conteudo">
+                    <h3>Programação</h3>
+                    <div class="cartao__conteudo__pergunta">
+                        <p>O que é JavaScript?</p>
                     </div>
-                    <div class="cartao_conteudo_resposta">
-                        Júpiter.
+                    <div class="cartao__conteudo__resposta">
+                        <p>O JavaScript é uma linguagem de programação</p>
                     </div>
                 </div>
-            </article>
+            </article> -->
         </section>
     </main>
     <footer>
